# HTTPServer

./: .gitignore  CMakeLists.txt  group.txt  main
dynamic/: 027919b0e5df9b24.txt  07711e9b645856f6.txt  0933add14273fef6.txt  0e0264bc57e18acf.txt  14a2c90e21857a28.txt  482203e600921327.txt  4e8716eff00e53ed.txt  5589a0cd1f99f9d7.txt  7da35c2ec42bb47f.txt  a4fc65650a2dccb6.txt  abdf2e473bf5d6c8.txt  bd1d9216a9c27645.txt  c20fc21f0e160ae4.txt  c3afeb827c9963e8.txt  c7ab2ae13d592159.txt  c7cdd1a1beeaf416.txt  d30dd84c5081f6dc.txt  da22af69fdd50b5f.txt  e0ad6ad0d223f301.txt  ed512eeda3ae469f.txt  f2660ea2439b277c.txt  f2deffc2981619fd.txt
src/: main.c  main.h  udp.c  udp.h  utils.c  utils.h
test/: conftest.py  test_praxis1.py
